@startuml NurFlac Class Diagram
' Styling
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam shadowing false
skinparam packageStyle rectangle

' =============================================================================
' Package 1 - Entry Point & Routing
' =============================================================================
package "1. Entry Point & Routing" {
    class Program << (S,#FF7700) static >>
    class TelegramBotWorker <<HostedService>>
    class UpdateHandler
    class CommandRouter
    class UploadProcessorService <<HostedService>>
}

' =============================================================================
' Package 2 - Chat & Command Handlers (COMMAND PATTERN)
' =============================================================================
package "2. Chat & Command Handlers" {
    interface ICommand {
        + ExecuteAsync(message: Message, user: User): Task
    }
    class SingleAudioUploadCommand
    class ScanCommand <<Admin Only>>
    class ModTestCommand <<Admin Only>>
    
    ICommand <|.. SingleAudioUploadCommand
    ICommand <|.. ScanCommand
    ICommand <|.. ModTestCommand
}

' =============================================================================
' Package 3 - User & Session Management (REPOSITORY, MEMENTO & ITERATOR)
' =============================================================================
package "3. User & Session Management" {
    package "User Management (REPOSITORY)" {
        interface IUserService
        interface IUserRepository
    }

    package "Session Management (MEMENTO & ITERATOR)" {
        class UploadSessionMemento <<Memento>>
        interface IUploadSessionCaretaker <<Caretaker>>
        interface IUploadSessionIterator <<Iterator>>
    }
}

' =============================================================================
' Package 4 - Audio Processing (FACTORY METHOD, TEMPLATE METHOD, SINGLETON, BUILDER, PROTOTYPE)
' =============================================================================
package "4. Audio Processing" {
    class SpectralAnalyzerFactory <<Factory Method>>
    abstract class BaseSpectralAnalyzer <<Template Method>>
    interface ISpectralAnalyzer
    class FFmpegAudioProcessor
    
    package "Spectral Analysis (NEW)" {
        class SpectralAnalysisEngine <<Singleton>>
        class ScanConfig <<Prototype>>
        class ScanConfigBuilder <<Builder>>
        class SpectralAnalysisResult <<DTO>>
    }
}

' =============================================================================
' Package 5 - Storage Services (ABSTRACT FACTORY, BRIDGE, COMPOSITE, PROXY)
' =============================================================================
package "5. Storage Services" {
    interface IStorageServiceFactory <<Abstract Factory>>
    interface IStorageService <<Implementor>>
    abstract class AudioLibraryStorage <<Abstraction / Bridge>>
    class StorageServiceProxy <<Proxy>>
    class CompositeStorageService <<Composite>>
}

' =============================================================================
' Package 6 - User Moderation (MEDIATOR, STATE, VISITOR, CHAIN, OBSERVER)
' =============================================================================
package "6. User Moderation" {
    interface IModerationMediator <<Mediator>>
    interface IUserState <<State>>
    interface IViolation <<Visitor Element>>
    interface IViolationVisitor <<Visitor>>
    abstract class PenaltyHandler <<Chain of Responsibility>>
    interface IModerationObserver <<Observer>>
}

' Architectural flow
"1. Entry Point & Routing" ..> "2. Chat & Command Handlers" : <<use>>
"2. Chat & Command Handlers" ..> "3. User & Session Management" : <<use>>
"2. Chat & Command Handlers" ..> "4. Audio Processing" : <<use>>
"2. Chat & Command Handlers" ..> "5. Storage Services" : <<use>>
"2. Chat & Command Handlers" ..> "6. User Moderation" : <<use>>

@enduml
